# Ren

./: .gitignore  .gitmodules  CMakeLists.txt  Niagrara.md  README.md
base/: CMakeLists.txt  VDeleter.h  bits.h  common.h  filesystem.cpp  filesystem.h  macro.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  shader_module.cpp  shader_module.h  shaders.cpp  shaders.h  spirv-reflect.cpp  spirv-reflect.h  swapchain.cpp
examples/: CMakeLists.txt
examples/01.helloWorld/: 01.helloworld.cpp
examples/02.modelRendering/: 02.modelRendering.cpp
examples/03.pushDescriptors/: 03.pushDescriptors.cpp
examples/04.meshlet/: 04.meshlet.cpp  common.h  filesystem.cpp  pipeline.cpp  pipeline.h  shaders.cpp  swapchain.h
examples/05.rin/: 05.rin.cpp  common.h  device.cpp  device.h  math.cpp  math.h  mesh.cpp  mesh.h  program.cpp  program.h  resources.cpp  resources.h  shader.cpp  shader.h  shaders.cpp  shaders.h  swapchain.cpp  swapchain.h  synchronizes.cpp  synchronizes.h  types.h
examples/06.spirv-reflect/: 06.spirv-reflect.cpp
examples/HelloWorld/: main.cpp
licenses/: spirv_reflect.license  vulkan-cpp-library.license
shaders/: base.frag  base.frag.glsl  base.vert  base.vert.glsl  compile.bat  compile.sh  compileshaders.py
shaders/01.helloWorld/: base.frag.spv  base.vert.spv
shaders/02.modelRendering/: base.vert.spv
shaders/03.pushDescriptors/: base.frag  base.frag.spv  base.vert  base.vert.spv
shaders/04.meshlet/: base.mesh  base.mesh.spv  base.task  base.task.spv  base.vert  base.vert.spv  basefvf.vert  basefvf.vert.spv
shaders/05.rin/: base.frag  base.frag.spv  base.vert  base.vert.spv  cmd.cluster.comp  cmd.comp  cmd.frustum.comp  cmd.indirect.comp  drawcmd.cluster.comp  drawcmd.comp  drawcmd.frustum.comp  mesh.h
shaders/06.spirv-reflect/: mesh.h  pushdescriptor.mesh  vertexinputstate.vert
